Updated programming and intro3d websites. Removed intro3d items from todo

--- a/projects/blender/intro3d/index.html
+++ b/projects/blender/intro3d/index.html
@@ -41,7 +41,27 @@
 
 		<iframe width="560" height="315" src="https://www.youtube.com/embed/K783SDTBKmg?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
+         <h4>Things I never did:</h4>
+
+* [ ] Display damage (flash of pain)
+* [ ] Consider [https://docs.unrealengine.com/5.3/en-US/blueprint-best-practices-in-unreal-engine/](https://docs.unrealengine.com/5.3/en-US/blueprint-best-practices-in-unreal-engine/)
+* [ ] Make a machine exoskeleton for fish model
+* [ ] Animate fish
+* [ ] Game over state in unreal
+* [ ] Pickup sword and discard sword
+* [ ] Pickup club and discard club
+* [ ] Attack with sword (in mouth?)
+* [ ] Attack with club (in mouth?)
+* [ ] Improve models and make finer castles and houses
+* [ ] Import platforms, can be used as stones with grass on top
+* [ ] Animate carrot man
+* [ ] Animate fish #intro-3d (drop?)
+* [ ] Make sound effects for intro #intro-3d
+
+
           <h4>Intro 3D Final Folder Assignment</h4>
+
+
 
 	  <p>Note : Final submission only in Inspera</p>
 
