--- a/todo.html
+++ b/todo.html
@@ -49,122 +49,20 @@
 <h6 id="update-in-the-morning">Update in the morning</h6>
 <ul class="task-list">
 <li><input type="checkbox" disabled="" />
-Add HUD which shows amount of flowers</li>
+Go to programming workshop Saturday</li>
+<li><input type="checkbox" disabled="" />
+Go to programming workshop Monday</li>
 </ul>
 <h6 id="calls-atcomputer-errands-office-athome-agendas-read">#calls #atComputer #errands #office #atHome #agendas #read</h6>
 <h1 id="action">Action</h1>
 <h6 id="assign-time.-revisit.-flag-what-needs-to-be-done-today.-the-battle-is-to-remember-what-to-do">Assign time. Revisit. Flag what needs to be done today. The battle is to remember what to do!</h6>
 <ul class="task-list">
-<li><input type="checkbox" disabled="" checked="" />
-Write reflection note for part 1</li>
-<li><input type="checkbox" disabled="" checked="" />
-Write reflection note for part 2</li>
-<li><input type="checkbox" disabled="" checked="" />
-Prepare assets for Sketchfab</li>
-<li><input type="checkbox" disabled="" checked="" />
-Upload assets to Sketchfab</li>
-<li><input type="checkbox" disabled="" />
-Push player in correct direction</li>
-<li><input type="checkbox" disabled="" />
-Jump on head of enemy</li>
-<li><input type="checkbox" disabled="" />
-Double check naming convention</li>
-<li><input type="checkbox" disabled="" checked="" />
-Set UVs and textures for sword</li>
-<li><input type="checkbox" disabled="" />
-Display damage (flash of pain)</li>
-<li><input type="checkbox" disabled="" />
-Consider <a href="https://docs.unrealengine.com/5.3/en-US/blueprint-best-practices-in-unreal-engine/">https://docs.unrealengine.com/5.3/en-US/blueprint-best-practices-in-unreal-engine/</a></li>
-<li><input type="checkbox" disabled="" />
-Implement attack delay</li>
 <li><input type="checkbox" disabled="" />
 Buy labeler for post box</li>
-<li><input type="checkbox" disabled="" />
-Make a machine exoskeleton for fish model</li>
-<li><input type="checkbox" disabled="" />
-Animate fish</li>
-<li><input type="checkbox" disabled="" />
-Game over state in unreal</li>
-<li><input type="checkbox" disabled="" />
-Pickup sword and discard sword</li>
-<li><input type="checkbox" disabled="" />
-Pickup club and discard club</li>
-<li><input type="checkbox" disabled="" />
-Attack with sword (in mouth?)</li>
-<li><input type="checkbox" disabled="" />
-Attack with club (in mouth?)</li>
-<li><input type="checkbox" disabled="" checked="" />
-Change all content to have names following unreal naming scheme <a href="https://docs.unrealengine.com/5.3/en-US/recommended-asset-naming-conventions-in-unreal-engine-projects/">https://docs.unrealengine.com/5.3/en-US/recommended-asset-naming-conventions-in-unreal-engine-projects/</a></li>
 <li><input type="checkbox" disabled="" />
 Buy Ben Eater CPU kit</li>
 <li><input type="checkbox" disabled="" />
 Buy Ben Eater GPU kit</li>
-<li><input type="checkbox" disabled="" checked="" />
-Move left and right in Unreal</li>
-<li><input type="checkbox" disabled="" checked="" />
-Jump in Unreal</li>
-<li><input type="checkbox" disabled="" checked="" />
-Attack in Unreal</li>
-<li><input type="checkbox" disabled="" checked="" />
-Pickup flowers in Unreal</li>
-<li><input type="checkbox" disabled="" checked="" />
-Spawn powerups in Unreal</li>
-<li><input type="checkbox" disabled="" checked="" />
-Attack enemy in Unreal</li>
-<li><input type="checkbox" disabled="" checked="" />
-Take damage in Unreal</li>
-<li><input type="checkbox" disabled="" checked="" />
-Get scenes running in sequence in unreal</li>
-<li><input type="checkbox" disabled="" />
-Improve models and make finer castles and houses</li>
-<li><input type="checkbox" disabled="" />
-Import platforms, can be used as stones with grass on top</li>
-<li><input type="checkbox" disabled="" checked="" />
-Reimport tree assets converted to power by 2 textures</li>
-<li><input type="checkbox" disabled="" checked="" />
-Implement signs in unreal</li>
-<li><input type="checkbox" disabled="" checked="" />
-Texture carrot man</li>
-<li><input type="checkbox" disabled="" />
-Animate carrot man</li>
-<li><input type="checkbox" disabled="" checked="" />
-Make scene in unreal</li>
-<li><input type="checkbox" disabled="" checked="" />
-Put hot water in bucket</li>
-<li><input type="checkbox" disabled="" checked="" />
-Put washing up liquid in hot water bucket</li>
-<li><input type="checkbox" disabled="" checked="" />
-Clean bathroom floor</li>
-<li><input type="checkbox" disabled="" checked="" />
-Clean bathroom walls</li>
-<li><input type="checkbox" disabled="" checked="" />
-Clean bathroom mirror</li>
-<li><input type="checkbox" disabled="" checked="" />
-Make low-poly tree <a href="https://www.youtube.com/watch?v=y7PdiGXbrD0">https://www.youtube.com/watch?v=y7PdiGXbrD0</a></li>
-<li><input type="checkbox" disabled="" checked="" />
-Make low-poly flower <a href="https://www.youtube.com/watch?v=cxd-m7Tv3BM">https://www.youtube.com/watch?v=cxd-m7Tv3BM</a></li>
-<li><input type="checkbox" disabled="" checked="" />
-Make a bush <a href="https://www.youtube.com/watch?v=huvZkHTSHD8">https://www.youtube.com/watch?v=huvZkHTSHD8</a></li>
-<li><input type="checkbox" disabled="" checked="" />
-Make a platform</li>
-<li><input type="checkbox" disabled="" checked="" />
-Make sub platforms <a href="https://www.youtube.com/watch?v=Qa107gT_nXc">https://www.youtube.com/watch?v=Qa107gT_nXc</a></li>
-<li><input type="checkbox" disabled="" checked="" />
-Make a rock <a href="https://www.youtube.com/watch?v=pqlR30p9BmA">https://www.youtube.com/watch?v=pqlR30p9BmA</a></li>
-<li><input type="checkbox" disabled="" checked="" />
-Texture shroom #intro-3d</li>
-<li><input type="checkbox" disabled="" checked="" />
-Animate shroom #intro-3d</li>
-<li><input type="checkbox" disabled="" checked="" />
-Texture fish #intro-3d</li>
-<li><input type="checkbox" disabled="" />
-Animate fish #intro-3d (drop?)</li>
-<li><input type="checkbox" disabled="" checked="" />
-Make carrot man as practice #intro-3d</li>
-<li><input type="checkbox" disabled="" checked="" />
-Make an intro for 3d folder #intro-3d</li>
-<li><input type="checkbox" disabled="" />
-Make sound effects for intro #intro-3d</li>
 <li><input type="checkbox" disabled="" checked="" />
 Do weekly mathematics 42 #mathematics</li>
 <li><input type="checkbox" disabled="" checked="" />
