--- a/projects/programming/index.html
+++ b/projects/programming/index.html
@@ -37,11 +37,18 @@
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <div class="container">
       <div class="row">
-        <div class="two-thirds column" style="margin-top: 25%">
+        <div class="two-thirds column" style="margin-top: 5%">
 
           <h4>Programming I</h4>
 
           <p>Workshop Saturday 2. December 2023</p>
+
+            <ul>
+              <li>C101-PracticeProblems.pdf <a href="C101-PracticeProblems.pdf">pdf</a></li>
+              <li>Closed_Book_Fall_2022_from_web.pdf <a href="Closed_Book_Fall_2022_from_web.pdf">pdf</a></li>
+              <li>MockExam.pdf <a href="MockExam.pdf">pdf</a></li>
+            </ul>
+
           <p>Workshop Monday 4. December 2023</p>
           <p>Exam Wednesday 6. December 2023</p>
           <p></p>
@@ -50,13 +57,7 @@
 
         <!-- Side column
         –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-        <div class="one-third column portrait" style="margin-top: 25%">
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="two-thirds column">
-
+        <div class="one-third column portrait" style="margin-top: 5%">
 <div id="my-calendar"></div>
 
 <script type="text/javascript">
@@ -78,6 +79,12 @@
             "06/12/2023"
     ]);
 </script>
+
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="two-thirds column">
 
         </div>
 
