Making more space for calendar in programming project

--- a/projects/programming/index.html
+++ b/projects/programming/index.html
@@ -37,11 +37,11 @@
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <div class="container">
       <div class="row">
-        <div class="two-thirds column" style="margin-top: 5%">
+        <div class="one-third column" style="margin-top: 5%">
 
-          <h4>Programming I</h4>
+          <h3>Programming I</h3>
 
-          <p>Workshop Saturday 2. December 2023</p>
+          <h4>Workshop Saturday 2. December 2023</h4>
 
             <ul>
               <li>C101-PracticeProblems.pdf <a href="C101-PracticeProblems.pdf">pdf</a></li>
@@ -49,15 +49,16 @@
               <li>MockExam.pdf <a href="MockExam.pdf">pdf</a></li>
             </ul>
 
-          <p>Workshop Monday 4. December 2023</p>
-          <p>Exam Wednesday 6. December 2023</p>
+          <h4>Workshop Monday 4. December 2023</h4>
+          <h4>Exam Wednesday 6. December 2023</h4>
+          <b>Good luck</b>
           <p></p>
 
         </div>
 
         <!-- Side column
         –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-        <div class="one-third column portrait" style="margin-top: 5%">
+        <div class="two-thirds column portrait" style="margin-top: 5%">
 <div id="my-calendar"></div>
 
 <script type="text/javascript">
