Trying to use columns in programming project page

--- a/projects/programming/index.html
+++ b/projects/programming/index.html
@@ -37,7 +37,7 @@
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <div class="container">
       <div class="row">
-        <div class="one-third column" style="margin-top: 5%">
+        <div class="five columns" style="margin-top: 5%">
 
           <h3>Programming I</h3>
 
@@ -58,7 +58,7 @@
 
         <!-- Side column
         –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-        <div class="two-thirds column portrait" style="margin-top: 5%">
+        <div class="seven columns" style="margin-top: 5%">
 <div id="my-calendar"></div>
 
 <script type="text/javascript">
