Wrote an agenda for studying on programming project page

--- a/projects/programming/index.html
+++ b/projects/programming/index.html
@@ -50,7 +50,18 @@
             </ul>
 
           <h4>Workshop Monday 4. December 2023</h4>
+
+            <ul>
+              <li>Programmering av matematikk høsten 2023.pdf <a href="programmering_matematikk_jeh.pdf">pdf</a></li>
+              <li>Redo compulsory 3 <a href="comp3.text">text</a></li>
+            </ul>
+
           <h4>Exam Wednesday 6. December 2023</h4>
+          <p>Check studentweb, your details might be different</p>
+            <p><b>Eksamen:</b> 06.12.2023 kl 09:00 - 4t ordinær tid.</p>
+            <p><b>Rom:</b> 2N3-211-Biohus 3, 211</p>
+            <p><b>Sted:</b> Biohuset</p>
+            <p><b>Eksamenssystem:</b>Inspera assessment - Inspera assessment</p>
           <b>Good luck</b>
           <p></p>
 
