--- a/projects/programming/index.html
+++ b/projects/programming/index.html
@@ -24,7 +24,7 @@
 
     <!-- Favicon
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <link rel="icon" type="image/png" href="https://avatars.githubusercontent.com/u/1408981?v=4">
+    <link rel="icon" type="image/png" href="https://alanhaugen.github.io/projects/blender/intro3d/images/cozyhouse.png">
 
 	<!-- jsCalendar v1.4.4 Javascript and CSS -->
 	<script src="https://cdn.jsdelivr.net/npm/simple-jscalendar@1.4.4/source/jsCalendar.min.js" integrity="sha384-0LaRLH/U5g8eCAwewLGQRyC/O+g0kXh8P+5pWpzijxwYczD3nKETIqUyhuA8B/UB" crossorigin="anonymous"></script>
