Remembered to update Philip list

--- a/todo.html
+++ b/todo.html
@@ -199,13 +199,13 @@ Help Philip excel at R1</li>
 Help Ulrik excel at 10. grade Mathematics</li>
 <li><input type="checkbox" disabled="" checked="" />
 Ulrik lesson 1</li>
-<li><input type="checkbox" disabled="" checked="" />
+<li><input type="checkbox" disabled="" />
 Ulrik lesson 2</li>
-<li><input type="checkbox" disabled="" checked="" />
+<li><input type="checkbox" disabled="" />
 Ulrik lesson 3</li>
-<li><input type="checkbox" disabled="" checked="" />
+<li><input type="checkbox" disabled="" />
 Ulrik lesson 4</li>
-<li><input type="checkbox" disabled="" checked="" />
+<li><input type="checkbox" disabled="" />
 Ulrik lesson 5</li>
 <li><input type="checkbox" disabled="" />
 Write paper for mdpi</li>
