--- a/todo.html
+++ b/todo.html
@@ -52,6 +52,8 @@
 Go to programming workshop Saturday</li>
 <li><input type="checkbox" disabled="" />
 Go to programming workshop Monday</li>
+<li><input type="checkbox" disabled="" />
+Ask Ulrik when he wants to have more lessons</li>
 </ul>
 <h6 id="calls-atcomputer-errands-office-athome-agendas-read">#calls #atComputer #errands #office #atHome #agendas #read</h6>
 <h1 id="action">Action</h1>
