Added another item  to agenda programming page

--- a/projects/programming/index.html
+++ b/projects/programming/index.html
@@ -54,6 +54,7 @@
             <ul>
               <li>Programmering av matematikk høsten 2023.pdf <a href="programmering_matematikk_jeh.pdf">pdf</a></li>
               <li>Redo compulsory 3 <a href="comp3.text">text</a></li>
+              <li>Read slides on instructure</a></li>
             </ul>
 
           <h4>Exam Wednesday 6. December 2023</h4>
