Added room to website

--- a/projects/programming/index.html
+++ b/projects/programming/index.html
@@ -43,6 +43,8 @@
 
           <h3>Workshop Saturday 2. December 2023</h3>
 
+            <p><b>Room:</b> Grupperom 10 <a href="https://link.mazemap.com/aP2GFqNP">map</a></p>
+
             <ul>
               <li>C101-PracticeProblems.pdf <a href="C101-PracticeProblems.pdf">pdf</a></li>
               <li>Closed_Book_Fall_2022_from_web.pdf <a href="Closed_Book_Fall_2022_from_web.pdf">pdf</a></li>
