Added resources for monday

--- a/projects/programming/index.html
+++ b/projects/programming/index.html
@@ -54,7 +54,28 @@
 
           <h4>Workshop Monday 4. December 2023</h4>
 
+            <p><b>Room:</b> B006</p>
+            <p><b>Time:</b> 13:15 - 18:15</p>
+
             <ul>
+              <li>Fun programming exercises</a></li>
+            </ul>
+            <p><b>Examples:</b></p>
+            <ul>
+              <li>Make a morse code to text converter</li>
+              <li>Make a write number as string generator</li>
+              <li>Write a fruit machine game</li>
+              <li>Write asteroids game for the terminal</li>
+              <li>Convert weights (units) from kilos to pounds</li>
+              <li>Write out all the ascii characters from numbers to letters (casting)</li>
+              <li>Write out the newline, tab, quote and backlash characters</li>
+            </ul>
+            <p><b>Other:</b></p>
+            <ul>
+              <li>Consider modern graphics programming [https://paroj.github.io/gltut/](https://paroj.github.io/gltut/)</li>
+              <li>Consider The Black Art of 3D Graphics Programming [https://archive.org/details/BlackArt3DEBook](https://archive.org/details/BlackArt3DEBook)</li>
+              <li>Consider Datastructures for Games Programmers [https://cdn.preterhuman.net/texts/math/Data_Structure_And_Algorithms/Data%20Structure%20For%20Game%20Programers%20-%20Ron%20Penton.pdf](https://cdn.preterhuman.net/texts/math/Data_Structure_And_Algorithms/Data%20Structure%20For%20Game%20Programers%20-%20Ron%20Penton.pdf)</li>
+              <li>Consider Mazes for Games Programmers [https://bibsys-almaprimo.hosted.exlibrisgroup.com/primo-explore/fulldisplay?docid=BIBSYS_ILS71520547300002201&context=L&vid=HH&lang=no_NO&search_scope=default_scope&adaptor=Local%20Search%20Engine&tab=default_tab&query=any,contains,mazes&offset=0](https://bibsys-almaprimo.hosted.exlibrisgroup.com/primo-explore/fulldisplay?docid=BIBSYS_ILS71520547300002201&context=L&vid=HH&lang=no_NO&search_scope=default_scope&adaptor=Local%20Search%20Engine&tab=default_tab&query=any,contains,mazes&offset=0)</li>
               <li>Programmering av matematikk høsten 2023.pdf <a href="programmering_matematikk_jeh.pdf">pdf</a></li>
               <li>Redo compulsory 3 <a href="comp3.text">text</a></li>
               <li>Read slides on instructure</a></li>
