--- a/todo.html
+++ b/todo.html
@@ -54,6 +54,8 @@ Go to programming workshop Saturday</li>
 Go to programming workshop Monday</li>
 <li><input type="checkbox" disabled="" />
 Ask Ulrik when he wants to have more lessons</li>
+<li><input type="checkbox" disabled="" />
+Figure out how 10. graders do likningssett</li>
 </ul>
 <h6 id="calls-atcomputer-errands-office-athome-agendas-read">#calls #atComputer #errands #office #atHome #agendas #read</h6>
 <h1 id="action">Action</h1>
