Fixed the links

--- a/projects/programming/index.html
+++ b/projects/programming/index.html
@@ -72,10 +72,10 @@
             </ul>
             <p><b>Other:</b></p>
             <ul>
-              <li>Consider modern graphics programming [https://paroj.github.io/gltut/](https://paroj.github.io/gltut/)</li>
-              <li>Consider The Black Art of 3D Graphics Programming [https://archive.org/details/BlackArt3DEBook](https://archive.org/details/BlackArt3DEBook)</li>
-              <li>Consider Datastructures for Games Programmers [https://cdn.preterhuman.net/texts/math/Data_Structure_And_Algorithms/Data%20Structure%20For%20Game%20Programers%20-%20Ron%20Penton.pdf](https://cdn.preterhuman.net/texts/math/Data_Structure_And_Algorithms/Data%20Structure%20For%20Game%20Programers%20-%20Ron%20Penton.pdf)</li>
-              <li>Consider Mazes for Games Programmers [https://bibsys-almaprimo.hosted.exlibrisgroup.com/primo-explore/fulldisplay?docid=BIBSYS_ILS71520547300002201&context=L&vid=HH&lang=no_NO&search_scope=default_scope&adaptor=Local%20Search%20Engine&tab=default_tab&query=any,contains,mazes&offset=0](https://bibsys-almaprimo.hosted.exlibrisgroup.com/primo-explore/fulldisplay?docid=BIBSYS_ILS71520547300002201&context=L&vid=HH&lang=no_NO&search_scope=default_scope&adaptor=Local%20Search%20Engine&tab=default_tab&query=any,contains,mazes&offset=0)</li>
+              <li>Consider modern graphics programming <a href="https://paroj.github.io/gltut/">website</a></li>
+              <li>Consider The Black Art of 3D Graphics Programming <a href="https://archive.org/details/BlackArt3DEBook">archive.org</a></li>
+              <li>Consider Datastructures for Games Programmers <a href="https://cdn.preterhuman.net/texts/math/Data_Structure_And_Algorithms/Data%20Structure%20For%20Game%20Programers%20-%20Ron%20Penton.pdf]">preterhuman.net</a></li>
+              <li>Consider Mazes for Games Programmers <a href="https://bibsys-almaprimo.hosted.exlibrisgroup.com/primo-explore/fulldisplay?docid=BIBSYS_ILS71520547300002201&context=L&vid=HH&lang=no_NO&search_scope=default_scope&adaptor=Local%20Search%20Engine&tab=default_tab&query=any,contains,mazes&offset=0">oria.no</a></li>
               <li>Programmering av matematikk høsten 2023.pdf <a href="programmering_matematikk_jeh.pdf">pdf</a></li>
               <li>Redo compulsory 3 <a href="comp3.text">text</a></li>
               <li>Read slides on instructure</a></li>
