--- a/projects/programming/index.html
+++ b/projects/programming/index.html
@@ -78,7 +78,7 @@
               <li>Consider Mazes for Games Programmers <a href="https://bibsys-almaprimo.hosted.exlibrisgroup.com/primo-explore/fulldisplay?docid=BIBSYS_ILS71520547300002201&context=L&vid=HH&lang=no_NO&search_scope=default_scope&adaptor=Local%20Search%20Engine&tab=default_tab&query=any,contains,mazes&offset=0">oria.no</a></li>
               <li>Programmering av matematikk høsten 2023.pdf <a href="programmering_matematikk_jeh.pdf">pdf</a></li>
               <li>Redo compulsory 3 <a href="comp3.text">text</a></li>
-              <li>Read slides on instructure</a></li>
+              <li>Read slides on canvas <a href="https://inn.instructure.com">https://inn.instructure.com</a></li>
             </ul>
 
           <h4>Exam Wednesday 6. December 2023</h4>
