--- a/projects/programming/index.html
+++ b/projects/programming/index.html
@@ -63,7 +63,7 @@
             <p><b>Examples:</b></p>
             <ul>
               <li>Make a morse code to text converter</li>
-              <li>Make a write number as string generator</li>
+              <li>Make a write number as string generator (convert int to string, then create output such as "one hundred and four" etc)</li>
               <li>Write a fruit machine game</li>
               <li>Write asteroids game for the terminal</li>
               <li>Convert weights (units) from kilos to pounds</li>
