Trying to make some examples for the programming fun programming examples

--- a/projects/programming/index.html
+++ b/projects/programming/index.html
@@ -62,13 +62,13 @@
             </ul>
             <p><b>Examples:</b></p>
             <ul>
-              <li>Make a morse code to text converter</li>
-              <li>Make a write number as string generator (convert int to string, then create output such as "one hundred and four" etc)</li>
-              <li>Write a fruit machine game</li>
-              <li>Write asteroids game for the terminal</li>
-              <li>Convert weights (units) from kilos to pounds</li>
-              <li>Write out all the ascii characters from numbers to letters (casting)</li>
-              <li>Write out the newline, tab, quote and backlash characters</li>
+              <li>Make a morse code to text converter <a href="morsecode">example</a></li>
+              <li>Make a write number as string generator (convert int to string, then create output such as "one hundred and four" etc) <a href="string">example</a></li>
+              <li>Write a fruit machine game <a href="fruitmachine">example</a></li>
+              <li>Write asteroids game for the terminal <a href="asteroids">example</a></li>
+              <li>Convert weights (units) from kilos to pounds <a href="units">example</a></li>
+              <li>Write out all the ascii characters from numbers to letters (casting) <a href="ascii">example</a></li>
+              <li>Write out the newline, tab, quote and backslash characters <a href="escape">example</a></li>
             </ul>
             <p><b>Other:</b></p>
             <ul>
