Finished all examples in programming project

--- a/projects/programming/index.html
+++ b/projects/programming/index.html
@@ -67,7 +67,7 @@
               <li>Write a fruit machine game <a href="fruitmachine">example</a></li>
               <li>Write asteroids game for the terminal <a href="asteroids">example</a></li>
               <li>Convert weights (units) from kilos to pounds <a href="units">example</a></li>
-              <li>Write out all the ascii characters from numbers to letters (casting) <a href="ascii">example</a></li>
+              <li>Write out all the ascii characters from numbers to letters (casting) <a href="fruitmachine.cpp">example</a></li>
               <li>Write out the newline, tab, quote and backslash characters <a href="escape">example</a></li>
             </ul>
             <p><b>Other:</b></p>
