Final improvement examples in projects page take 2

--- a/projects/programming/escape.html
+++ b/projects/programming/escape.html
@@ -1,7 +1,7 @@
 <p>You may have noticed you can’t really print out \n from C++?</p>
 <p>cout &lt;&lt; “\n”;</p>
 <p>That will just give you a newline.</p>
-<p>To print out “” you need to use the espace character. “\"</p>
+<p>To print out “\n” you need to use the espace character. “\"</p>
 <p>cout &lt;&lt; “\\n”;</p>
 <p>Write a program which does the above for newline and tab (\t) and quote
 and backslash</p>
