Made some technical ascii details clearer in project page

--- a/projects/programming/fruitmachine.html
+++ b/projects/programming/fruitmachine.html
@@ -1,5 +1,5 @@
 <p>At the beginning of Extended ASCII (an entire byte (8 bits) instead
-of 7 in ASCII) you will find some interesting characters on the Windows
+of 7 bits in ASCII) you will find some interesting characters on the Windows
 platform.</p>
 <p>Use the clubs (♣), diamonds (♦), hearts (♥), and spades (♠)
 characters to make a fruit machine.</p>
