Improved language on programming project page

--- a/projects/programming/index.html
+++ b/projects/programming/index.html
@@ -62,7 +62,7 @@
             </ul>
             <p><b>Examples:</b></p>
             <ul>
-              <li>Make a morse code to text converter <a href="morsecode.html">example</a></li>
+              <li>Make a morse code to text translator <a href="morsecode.html">example</a></li>
               <li>Make a write number as string generator (convert int to string, then create output such as "one hundred and four" etc) <a href="string.html">example</a></li>
               <li>Write a fruit machine game <a href="fruitmachine.html">example</a></li>
               <li>Write asteroids game for the terminal <a href="asteroids.html">example</a></li>
