Put some articles on todo list

--- a/todo.html
+++ b/todo.html
@@ -59,6 +59,8 @@ programming</label></li>
 programming</label></li>
 <li><label><input type="checkbox" />Ask Olea if she wants more
 lessons</label></li>
+<li><label><input type="checkbox" />Read The collapse of insects <a
+href="https://www.reuters.com/graphics/GLOBAL-ENVIRONMENT/INSECT-APOCALYPSE/egpbykdxjvq/?utm_source=hackernewsletter&amp;utm_medium=email&amp;utm_term=learn">https://www.reuters.com/graphics/GLOBAL-ENVIRONMENT/INSECT-APOCALYPSE/egpbykdxjvq/?utm_source=hackernewsletter&amp;utm_medium=email&amp;utm_term=learn</a></label></li>
 </ul>
 <h6 id="calls-atcomputer-errands-office-athome-agendas-read">#calls
 #atComputer #errands #office #atHome #agendas #read</h6>
@@ -261,6 +263,10 @@ href="https://github.com/readme/guides/finish-your-projects">https://github.com/
 href="https://paroj.github.io/gltut/">https://paroj.github.io/gltut/</a></li>
 <li>Choosing Ruby On Rails For Your Next Web Development Project <a
 href="https://www.ideamotive.co/ruby-on-rails/guide">https://www.ideamotive.co/ruby-on-rails/guide</a></li>
+<li>Read <a
+href="https://stanforddatascience.github.io/best-practices/study-design-phase.html#define-the-research-question">https://stanforddatascience.github.io/best-practices/study-design-phase.html#define-the-research-question</a></li>
+<li>Read <a
+href="http://jeffe.cs.illinois.edu/teaching/algorithms/?utm_source=hackernewsletter&amp;utm_medium=email&amp;utm_term=books">http://jeffe.cs.illinois.edu/teaching/algorithms/?utm_source=hackernewsletter&amp;utm_medium=email&amp;utm_term=books</a></li>
 </ul>
 <h1 id="dreams">Dreams</h1>
 <h6 id="goals-i-might-get-around-to-some-day">Goals I might get around
