Updated todo list

--- a/todo.html
+++ b/todo.html
@@ -51,8 +51,8 @@
 <h1 id="action">Action</h1>
 <h6 id="assign-time.-revisit.-flag-what-needs-to-be-done-today.-the-battle-is-to-remember-what-to-do">Assign time. Revisit. Flag what needs to be done today. The battle is to remember what to do!</h6>
 <ul class="task-list">
-<li><input type="checkbox" disabled="" checked="" />
-Go to Krabbe at 4</li>
+<li><input type="checkbox" disabled="" />
+Hand in first drawabox assignment -&gt; 18. desember 2023</li>
 <li><input type="checkbox" disabled="" />
 Add another exam to list of maths exams to do</li>
 <li><input type="checkbox" disabled="" />
@@ -61,12 +61,6 @@ Do jeh exercises in programming</li>
 Do MockExam exercises in programming</li>
 <li><input type="checkbox" disabled="" />
 Do Closed book exercises in programming</li>
-<li><input type="checkbox" disabled="" checked="" />
-Ask Olea if she wants more lessons</li>
-<li><input type="checkbox" disabled="" checked="" />
-Read The collapse of insects <a href="https://www.reuters.com/graphics/GLOBAL-ENVIRONMENT/INSECT-APOCALYPSE/egpbykdxjvq/?utm_source=hackernewsletter&amp;utm_medium=email&amp;utm_term=learn">https://www.reuters.com/graphics/GLOBAL-ENVIRONMENT/INSECT-APOCALYPSE/egpbykdxjvq/?utm_source=hackernewsletter&amp;utm_medium=email&amp;utm_term=learn</a></li>
-<li><input type="checkbox" disabled="" checked="" />
-Go to programming workshop Saturday</li>
 <li><input type="checkbox" disabled="" />
 Do maths exam 20H</li>
 <li><input type="checkbox" disabled="" />
@@ -82,10 +76,6 @@ Consider Abbas mathematics notes #mathematics</li>
 <li><input type="checkbox" disabled="" />
 Read Ekte programmering</li>
 <li><input type="checkbox" disabled="" checked="" />
-Go to programming workshop Monday</li>
-<li><input type="checkbox" disabled="" checked="" />
-Ask Ulrik when he wants to have more lessons</li>
-<li><input type="checkbox" disabled="" />
 Figure out how 10. graders do likningssett</li>
 <li><input type="checkbox" disabled="" />
 Buy labeler for post box</li>
@@ -102,15 +92,11 @@ Do closed book exam 2022 #programming</li>
 <li><input type="checkbox" disabled="" />
 Read a book 20 minutes #recreation</li>
 <li><input type="checkbox" disabled="" />
-Hand in first drawabox assignment</li>
-<li><input type="checkbox" disabled="" />
 Consider Linear Algebra Done Right <a href="https://linear.axler.net">https://linear.axler.net</a></li>
 <li><input type="checkbox" disabled="" />
 Consider 50,000 feet (life), 40,000 feet (three/five year plan), 30,000 feet (one/two year plan), 20,2000 feet (My hats), 10,000 feet (Current projects) and Runway (actions)</li>
 <li><input type="checkbox" disabled="" />
 Write script to do Modern Graphics Programming files (currently on tut05 out of tut18), make it as an append and prepend comment option in solid #programming</li>
-<li><input type="checkbox" disabled="" checked="" />
-Play Alan Wake II</li>
 <li><input type="checkbox" disabled="" />
 Learn more about Fritz Haber</li>
 <li><input type="checkbox" disabled="" />
@@ -149,8 +135,6 @@ Reconsider UML (made in nomnoml)</li>
 Implement numerical methods for Mathematics I for the computer</li>
 <li><input type="checkbox" disabled="" />
 Reference all books in private library</li>
-<li><input type="checkbox" disabled="" checked="" />
-Reference all bookmarks and delete them</li>
 <li><input type="checkbox" disabled="" />
 List all active courses I want to complete</li>
 <li><input type="checkbox" disabled="" />
@@ -238,7 +222,7 @@ Compulsory 3 -&gt; 27-october-2023 #programming-I</li>
 Compulsory 3 -&gt; 3-november-2023 #intro-3d</li>
 <li><input type="checkbox" disabled="" checked="" />
 Oblig 3 -&gt; 17-november-2023 #mathematics-I</li>
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Folder due -&gt; 1-december-2023 #intro-3d <a href="projects/blender/intro3d">projects/blender/intro3d</a></li>
 <li><input type="checkbox" disabled="" />
 Written exam -&gt; 6-december-2023 #programming-I</li>
