--- a/todo.html
+++ b/todo.html
@@ -66,6 +66,10 @@ Get Rudi’s washing out of the way</li>
 Get a haircut</li>
 <li><input type="checkbox" disabled="" />
 Buy new bed linen</li>
+<li><input type="checkbox" disabled="" />
+Cut fingernails</li>
+<li><input type="checkbox" disabled="" />
+Cut beard</li>
 </ul>
 <h6 id="calls-atcomputer-errands-office-athome-agendas-read">#calls #atComputer #errands #office #atHome #agendas #read</h6>
 <h1 id="action">Action</h1>
