--- a/todo.html
+++ b/todo.html
@@ -48,13 +48,13 @@
 <h1 id="inbox">Inbox</h1>
 <h6 id="update-in-the-morning">Update in the morning</h6>
 <ul class="task-list">
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Take washing out of washing machine</li>
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Hang clothes up to dry</li>
 <li><input type="checkbox" disabled="" />
 Take clothes up to room</li>
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Wash more clothes</li>
 <li><input type="checkbox" disabled="" />
 Dry second batch of clothes</li>
@@ -62,9 +62,7 @@ Dry second batch of clothes</li>
 Take second batch up to room</li>
 <li><input type="checkbox" disabled="" />
 Get Rudi’s washing out of the way</li>
-<li><input type="checkbox" disabled="" />
-Get a haircut</li>
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Buy new bed linen</li>
 <li><input type="checkbox" disabled="" checked="" />
 Cut fingernails</li>
@@ -79,10 +77,6 @@ Cut beard</li>
 Hand in first drawabox assignment -&gt; 18. desember 2023</li>
 <li><input type="checkbox" disabled="" />
 Do jeh exercises in programming</li>
-<li><input type="checkbox" disabled="" />
-Do MockExam exercises in programming</li>
-<li><input type="checkbox" disabled="" />
-Do Closed book exercises in programming</li>
 <li><input type="checkbox" disabled="" />
 Consider Abbas mathematics notes #mathematics</li>
 <li><input type="checkbox" disabled="" />
