Made some items in inbox for tomorrow

--- a/todo.html
+++ b/todo.html
@@ -47,6 +47,14 @@
 
 <h1 id="inbox">Inbox</h1>
 <h6 id="update-in-the-morning">Update in the morning</h6>
+<ul class="task-list">
+<li><input type="checkbox" disabled="" />
+Code for at least 15 minutes</li>
+<li><input type="checkbox" disabled="" />
+Read Lær Sjakk and complete first chapter (and exercises)</li>
+<li><input type="checkbox" disabled="" />
+Hand in second drawabox assignment -&gt; 18. january 2023</li>
+</ul>
 <h6 id="calls-atcomputer-errands-office-athome-agendas-read">#calls #atComputer #errands #office #atHome #agendas #read</h6>
 <h1 id="action">Action</h1>
 <h6 id="assign-time.-revisit.-flag-what-needs-to-be-done-today.-the-battle-is-to-remember-what-to-do">Assign time. Revisit. Flag what needs to be done today. The battle is to remember what to do!</h6>
@@ -63,8 +71,6 @@ Wash more clothes</li>
 Dry second batch of clothes</li>
 <li><input type="checkbox" disabled="" />
 Take second batch up to room</li>
-<li><input type="checkbox" disabled="" checked="" />
-Get Rudi’s washing out of the way</li>
 <li><input type="checkbox" disabled="" checked="" />
 Hand in first drawabox assignment -&gt; 18. desember 2023</li>
 <li><input type="checkbox" disabled="" />
@@ -200,30 +206,8 @@ Do global game jam in January with Rudi</li>
 <h6 id="todo-maybe-make-a-website-for-each-project">TODO: Maybe make a website for each project?</h6>
 <h1 id="due-dates">Due dates</h1>
 <ul class="task-list">
-<li><input type="checkbox" disabled="" checked="" />
-Compulsory 1 -&gt; 1-september-2023 #programming-I</li>
-<li><input type="checkbox" disabled="" checked="" />
-Oblig 1 -&gt; 18-september-2023 #mathematics-I</li>
-<li><input type="checkbox" disabled="" checked="" />
-Compulsory 1 -&gt; 22-september-2023 #intro-3d</li>
-<li><input type="checkbox" disabled="" checked="" />
-Compulsory 2 -&gt; 29-september-2023 #programming-I</li>
-<li><input type="checkbox" disabled="" checked="" />
-Compulsory 2 -&gt; 20-october-2023 #intro-3d</li>
-<li><input type="checkbox" disabled="" checked="" />
-Oblig 2 -&gt; 23-october-2023 #mathematics-I</li>
-<li><input type="checkbox" disabled="" checked="" />
-Compulsory 3 -&gt; 27-october-2023 #programming-I</li>
-<li><input type="checkbox" disabled="" checked="" />
-Compulsory 3 -&gt; 3-november-2023 #intro-3d</li>
-<li><input type="checkbox" disabled="" checked="" />
-Oblig 3 -&gt; 17-november-2023 #mathematics-I</li>
-<li><input type="checkbox" disabled="" checked="" />
-Folder due -&gt; 1-december-2023 #intro-3d <a href="projects/blender/intro3d">projects/blender/intro3d</a></li>
-<li><input type="checkbox" disabled="" checked="" />
-Written exam -&gt; 6-december-2023 #programming-I</li>
-<li><input type="checkbox" disabled="" checked="" />
-Written exam -&gt; 11-december-2023 #mathematics-I</li>
+<li><input type="checkbox" disabled="" />
+Read Lær Sjakk #chess</li>
 </ul>
 <h6 id="organize-each-day-triage.-then-weekly-big-picture">Organize each day (triage). Then weekly (big picture)</h6>
 <h1 id="reference-material">Reference material</h1>
