Added a few more items to inbox

--- a/todo.html
+++ b/todo.html
@@ -49,6 +49,10 @@
 <h6 id="update-in-the-morning">Update in the morning</h6>
 <ul class="task-list">
 <li><input type="checkbox" disabled="" />
+Do plotted perspective box homework</li>
+<li><input type="checkbox" disabled="" />
+Hand in drawabox lesson 1 completely</li>
+<li><input type="checkbox" disabled="" />
 Code for at least 15 minutes</li>
 <li><input type="checkbox" disabled="" />
 Read Lær Sjakk and complete first chapter (and exercises)</li>
