--- a/todo.html
+++ b/todo.html
@@ -47,6 +47,10 @@
 
 <h1 id="inbox">Inbox</h1>
 <h6 id="update-in-the-morning">Update in the morning</h6>
+<ul class="task-list">
+<li><input type="checkbox" disabled="" />
+Code for at least 15 minutes</li>
+</ul>
 <h6 id="calls-atcomputer-errands-office-athome-agendas-read">#calls #atComputer #errands #office #atHome #agendas #read</h6>
 <h1 id="action">Action</h1>
 <h6 id="assign-time.-revisit.-flag-what-needs-to-be-done-today.-the-battle-is-to-remember-what-to-do">Assign time. Revisit. Flag what needs to be done today. The battle is to remember what to do!</h6>
@@ -55,7 +59,7 @@
 Do plotted perspective box homework</li>
 <li><input type="checkbox" disabled="" checked="" />
 Hand in drawabox lesson 1 completely</li>
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Code for at least 15 minutes</li>
 <li><input type="checkbox" disabled="" checked="" />
 Read Lær Sjakk and complete first chapter (and exercises)</li>
