Made plans for tomorrow

--- a/todo.html
+++ b/todo.html
@@ -50,19 +50,15 @@
 <ul class="task-list">
 <li><input type="checkbox" disabled="" />
 Code for at least 15 minutes</li>
+<li><input type="checkbox" disabled="" />
+Draw 2 hours</li>
+<li><input type="checkbox" disabled="" />
+Read Lær Sjakk and complete third chapter (and exercises)</li>
 </ul>
 <h6 id="calls-atcomputer-errands-office-athome-agendas-read">#calls #atComputer #errands #office #atHome #agendas #read</h6>
 <h1 id="action">Action</h1>
 <h6 id="assign-time.-revisit.-flag-what-needs-to-be-done-today.-the-battle-is-to-remember-what-to-do">Assign time. Revisit. Flag what needs to be done today. The battle is to remember what to do!</h6>
 <ul class="task-list">
-<li><input type="checkbox" disabled="" checked="" />
-Do plotted perspective box homework</li>
-<li><input type="checkbox" disabled="" checked="" />
-Hand in drawabox lesson 1 completely</li>
-<li><input type="checkbox" disabled="" checked="" />
-Code for at least 15 minutes</li>
-<li><input type="checkbox" disabled="" checked="" />
-Read Lær Sjakk and complete first chapter (and exercises)</li>
 <li><input type="checkbox" disabled="" />
 Hand in second drawabox assignment -&gt; 18. january 2023</li>
 <li><input type="checkbox" disabled="" checked="" />
